--- a/pom.xml
+++ b/pom.xml
@@ -160,5 +160,38 @@
         </plugins>
       </build>
     </profile>
+
+    <!-- Examples Profile -->
+    <profile>
+      <id>examples</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.6.0</version>
+            <executions>
+              <execution>
+                <id>add-examples-source</id>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>add-source</goal>
+                </goals>
+                <configuration>
+                  <sources>
+                    <source>src/examples/java</source>
+                  </sources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.5.0</version>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
