--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,19 @@
       <version>3.27.6</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- JMH for performance profiling -->
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-core</artifactId>
+      <version>1.37</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-generator-annprocess</artifactId>
+      <version>1.37</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
