Adding V12 Crawler based on JOX

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- Jox structured concurrency library -->
+    <dependency>
+      <groupId>com.softwaremill.jox</groupId>
+      <artifactId>structured</artifactId>
+      <version>0.5.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
