--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -3,8 +3,8 @@ name: CI Builds
 on: [push]
 
 jobs:
-  run:
-    name: Build
+  unit-tests:
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -18,10 +18,34 @@ jobs:
         run: ./mvnw --batch-mode --no-transfer-progress test --file pom.xml
         env:
           MAVEN_OPTS: "--enable-preview"
+
+  integration-tests:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          submodules: true  # Fetches all submodules
+      - uses: actions/setup-java@v5
+        with:
+          distribution: 'graalvm' # See 'Supported distributions' for available options
+          java-version: '25'
       - name: Maven integration tests
         run: ./mvnw --batch-mode --no-transfer-progress verify --file pom.xml
         env:
           MAVEN_OPTS: "--enable-preview"
+
+  e2e-tests:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          submodules: true  # Fetches all submodules
+      - uses: actions/setup-java@v5
+        with:
+          distribution: 'graalvm' # See 'Supported distributions' for available options
+          java-version: '25'
       - name: Maven E2E tests
         run: ./mvnw --batch-mode --no-transfer-progress verify -Pe2e --file pom.xml
         env:
